--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!--======== HEADER ===========-->
     <header>
-        <nav class="navbar">
+        <nav class="navbar mx-2">
             <div class="nav-menu">
                 <div class="logo">
                     <a href=""><img style="max-width: 96px;" src="svg/logo.svg" onload="SVGInject(this)" /></a>
